--- a/app/app_server/views/layout.pug
+++ b/app/app_server/views/layout.pug
@@ -15,7 +15,7 @@ html
           .brand-text.float-left Atomic Films
             i.fa.fa-film.fa-sm(aria-hidden="true")
           br
-          p.pl-5.pt-5.af-motto-font= pageHeader.brandMotto
+          //p.pl-5.pt-5.af-motto-font= pageHeader.brandMotto
         button.navbar-toggler(type="button", data-toggle="collapse", data-target="#mainNavBar")
           span.navbar-toggler-icon
         #mainNavBar.collapse.navbar-collapse
