--- a/app/app_server/views/reserve-movie.pug
+++ b/app/app_server/views/reserve-movie.pug
@@ -5,7 +5,7 @@ block content
     .container
       h1.af-pageTitle-font= pageTitle
       br
-      p.lead.text-justify= pageHeader.message
+      p.lead.text-justify.text-light.text-center= pageHeader.message
     //.card
       //.card-body.bg-dark
         //h4.card-title-text.pb-5.text-justify
