Fix layout/design inconsistencies.

--- a/app/app_server/views/reserve-movie.pug
+++ b/app/app_server/views/reserve-movie.pug
@@ -1,13 +1,9 @@
 extends layout
 
 block content
-  section.jumbotron.text-center.bg-dark
-    .container
-      h1.af-pageTitle-font= pageTitle
-      br
-      p.lead.text-justify.text-light.text-center= pageHeader.message
-    //.card
-      //.card-body.bg-dark
-        //h4.card-title-text.pb-5.text-justify
+  .container
     br
+    h1.af-pageTitle-font.text-center= pageTitle
+    br
+    p.lead.text-justify.text-dark.text-center= pageHeader.message
     br
